invest-app/main/default/objects/InvestmentPlan__c/InvestmentPlan__c.object-meta.xml
<CustomObject>
    <label>Investment Plan</label>
    <nameField>
        <label>Investment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>