invest-app/main/default/objects/InvestmentPlan__c/fields/TotalCurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>TotalCurrentBalance__c</fullName>
    <label>Total Current Balance</label>
    <summarizedField>Investment__c.CurrentBalance__c</summarizedField>
    <summaryForeignKey>Investment__c.InvestmentPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>