invest-app/main/default/objects/InvestmentPlan__c/fields/TotalCurrentlyInvestedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalCurrentlyInvestedAmount__c</fullName>
    <label>Total Currently Invested Amount</label>
    <summarizedField>Investment__c.CurrentlyInvestedAmount__c</summarizedField>
    <summaryForeignKey>Investment__c.InvestmentPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>