invest-app/main/default/objects/InvestmentPlan__c/fields/TotalCurrentRoiPercentage__c.field-meta.xml
<CustomField>
    <fullName>TotalCurrentRoiPercentage__c</fullName>
    <formula>((TotalCurrentBalance__c +  ABS(TotalEarned__c )) /  TotalInvestedAmount__c) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Current ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>