invest-app/main/default/objects/InvestmentPlan__c/fields/TotalEarned__c.field-meta.xml
<CustomField>
    <fullName>TotalEarned__c</fullName>
    <label>Total Earned Amount</label>
    <summarizedField>Investment__c.EarnedAmount__c</summarizedField>
    <summaryForeignKey>Investment__c.InvestmentPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>