invest-app/main/default/objects/InvestmentPlan__c/fields/TotalInvestedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInvestedAmount__c</fullName>
    <label>Total Invested Amount</label>
    <summarizedField>Investment__c.InvestedAmount__c</summarizedField>
    <summaryForeignKey>Investment__c.InvestmentPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>