invest-app/main/default/objects/InvestmentPlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TotalCurrentlyInvestedAmount__c</columns>
    <columns>TotalCurrentBalance__c</columns>
    <columns>TotalCurrentRoiPercentage__c</columns>
    <columns>TotalInvestedAmount__c</columns>
    <columns>TotalEarned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>